testsuite/poke.pkl/funcall-def-diag-7.pk
/* { dg-do compile } */

defun foo = (string a, int b = a) void: {} /* { dg-error ".*\n.*" } */
